test/libsolidity/syntaxTests/nameAndTypeResolution/552_warn_about_address_members_on_non_this_contract_delegatecall.sol
contract C {
    function f() pure public {
        C c;
        c.delegatecall;
    }
}
// ----
// TypeError: (65-79): Member "delegatecall" not found or not visible after argument-dependent lookup in contract C
